- tx icons now more crisp - fixed progressbar status alignment and color - replaced some old logos - splash screen crisper

--- a/src/qt/res/css/light.css
+++ b/src/qt/res/css/light.css
@@ -47,7 +47,7 @@ border-bottom:2px solid #232660;
 }
 
 QProgressBar {
-    color:white;
+    color:black;
     font-size:9px;
 	border:none;
 }
